# boa-research

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  pyproject.toml
boaresearch/: __init__.py  acceptance.py  agent_presets.py  cli.py  controller.py  descriptors.py  git_auth.py  git_state.py  init_app.py  init_banner.py  init_models.py  init_services.py  loader.py  metrics.py  paths.py  process.py  prompt_builder.py  prompt_templates.py  runner.py  schema.py  search.py  store.py  worktree.py
boaresearch/agents/: __init__.py  base.py  cli.py  deepagents.py  interaction.py  tools.py
boaresearch/init/: __init__.py  app.py  banner.py  models.py  services.py
boaresearch/runtime/: __init__.py  controller.py  monitor.py  observer.py  paths.py  store.py  tools.py  worktree.py
boaresearch/search/: __init__.py  oracle.py  scoring.py  toolbox.py  trace.py
examples/cifar10_resnet/: README.md  eval.py  requirements.txt  train.py
examples/mnist_mlp_or_cnn/: .gitignore  README.md  boa.config  boa.md  eval.py  train.py
examples/tiny_transformer_text/: README.md  eval.py  train.py  (+1 more)
scripts/: get_claude_models.py  get_codex_models.py
tests/: test_acceptance.py  test_agent_presets.py  test_agents_cli.py  test_agents_interaction.py  test_claude_models_script.py  test_cli.py  test_codex_models_script.py  test_controller.py  test_descriptors.py  test_git_state.py  test_init_app.py  test_init_banner.py  test_init_services.py  test_loader.py  test_metrics.py  test_monitor.py  test_packaging.py  test_runner.py  test_search.py  test_store.py  test_tools_cli.py  test_worktree.py
(+37 files in other folders)
