[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boaresearch"
version = "0.1.0"
description = "Bayesian-optimized agent orchestration for third-party repositories."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Jano" }
]
dependencies = [
  "InquirerPy>=0.3.4,<1",
]

[project.optional-dependencies]
deepagents = [
  "deepagents",
  "langchain>=0.3",
  "langchain-core>=0.3",
  "langchain-ollama>=0.3",
  "langchain-openai>=0.3",
]

[project.scripts]
boa = "boaresearch.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["boaresearch*"]

[tool.setuptools.package-data]
boaresearch = ["prompts/**/*.md"]
